--- a/src/pages/Main/styles.module.css
+++ b/src/pages/Main/styles.module.css
@@ -2,5 +2,10 @@ main {
   display: flex;
   width: 100%;
   flex-direction: column;
-  gap: 32px;
+  gap: 24px;
+}
+
+.container {
+  padding: 24px;
+  min-height: 100vh;
 }
